# floater

./: .clangformat  CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/floater/: bit_representation.hpp
tests/: CMakeLists.txt  bit_representation.cpp
